created search button, work of art card, favorite icon, headers and paragraph components

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,3 +2,8 @@
 @import "alert";
 @import "avatar";
 @import "navbar";
+@import "headers";
+@import "paragraph";
+@import "buttons";
+@import "work-of-art-card";
+@import "favorite-icon";
