--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,45 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>ARTSOUILLE</h1>
+
+<div class="container-work-of-art-cards">
+
+  <div class="work-of-art-card">
+    <a href="">
+      <img src="/assets/dodoma.png" alt="dodoma">
+    </a>
+      <div class="work-of-art-card-infos">
+      <h3>Work of Art Title</h3>
+      <h4>Category / Category / Category</h4>
+      <p>By name of artist</p>
+      <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
+    </div>
+  </div>
+
+  <div class="work-of-art-card">
+    <a href="">
+      <img src="/assets/dodoma.png" alt="dodoma">
+    </a>
+    <div class="work-of-art-card-infos">
+      <h3>Work of Art Title</h3>
+      <h4>Category / Category / Category</h4>
+      <p>By name of artist</p>
+      <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
+    </div>
+  </div>
+
+  <div class="work-of-art-card">
+    <a href="">
+      <img src="/assets/dodoma.png" alt="dodoma">
+    </a>
+    <div class="work-of-art-card-infos">
+      <h3>Work of Art Title</h3>
+      <h4>Category / Category / Category</h4>
+      <p>By name of artist</p>
+      <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
+    </div>
+  </div>
+
+</div>
+
+<div class="btn-search">Search</div>
+
+<h1>ARTSOUILLE</h1>
