artist card created with subtle changes compared to the work of art card

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -40,6 +40,49 @@
 
 </div>
 
+<div class="container-artist-cards">
+
+  <div class="artist-card">
+    <a href="">
+      <img src="/assets/artist.png" alt="artist">
+    </a>
+    <div class="artist-card-infos">
+      <h3>Artist Name</h3>
+      <h4>Category / Category / Category</h4>
+      <p>Number of Works</p>
+      <p>Location</p>
+      <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
+    </div>
+  </div>
+
+  <div class="artist-card">
+    <a href="">
+      <img src="/assets/artist.png" alt="artist">
+    </a>
+    <div class="artist-card-infos">
+      <h3>Artist Name</h3>
+      <h4>Category / Category / Category</h4>
+      <p>Number of Works</p>
+      <p>Location</p>
+      <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
+    </div>
+  </div>
+
+  <div class="artist-card">
+    <a href="">
+      <img src="/assets/artist.png" alt="artist">
+    </a>
+    <div class="artist-card-infos">
+      <h3>Artist Name</h3>
+      <h4>Category / Category / Category</h4>
+      <p>Number of Works</p>
+      <p>Location</p>
+      <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
+    </div>
+  </div>
+
+</div>
+
 <div class="btn-search">Search</div>
 
 <h1>ARTSOUILLE</h1>
