created a profile card component

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -6,6 +6,7 @@
 @import "paragraph";
 @import "buttons";
 @import "work-of-art-card";
-@import "favorite-icon";
+@import "icons";
 @import "artist-card";
 @import "searchbar";
+@import "profile-card";
