--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -90,3 +90,33 @@
   </div>
 
 </div>
+<br>
+<div class="container-profile-card">
+
+  <div class="profile-card">
+    <a href="">
+      <img src="/assets/artist.png" alt="artist">
+    </a>
+    <div class="profile-card-infos">
+      <h3>Artist Name</h3>
+      <hr>
+      <h4>Category / Category / Category</h4>
+      <hr>
+      <p>Number of Works</p>
+      <hr>
+      <p>Location</p>
+      <hr>
+      <p>Biography</p>
+      <p>Vincent Willem van Gogh was a Dutch post-impressionist painter who
+      posthumously became one of the most famous and influential figures in the
+      history of Western art.</p>
+      <hr>
+      <p>See my exhibitions</p>
+      <hr>
+      <p>Want to collab? Send a message!</p>
+      <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
+    </div>
+  </div>
+
+</div>
+<br>
