Added all the actions of the controller

--- a/app/views/collabs/show.html.erb
+++ b/app/views/collabs/show.html.erb
@@ -2,5 +2,5 @@
 
 
 <%= link_to "Edit Collab", edit_collab_path(@collab) %>
-
+<%= link_to "Create a new exhibition", new_collab_exhibition_path(@collab) %>
 <%= link_to "Back", collabs_path %>
