work in progress...

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,15 +8,66 @@
   </form>
 </div>
 
+<div class="container-featured-artists-cards">
+
+  <div class="featured-artist-card">
+    <h4>Featured</h4>
+    <a href="">
+      <img src="/assets/artist_2.png" alt="artist_2">
+    </a>
+    <div class="featured-artist-card-infos">
+      <h3>Work of Art Title</h3>
+      <p>By name of artist</p>
+      <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
+    </div>
+  </div>
+
+  <div class="featured-artist-card">
+    <h4>Featured</h4>
+    <a href="">
+      <img src="/assets/artist_1.png" alt="artist_1">
+    </a>
+    <div class="featured-artist-card-infos">
+      <h3>Work of Art Title</h3>
+      <p>By name of artist</p>
+      <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
+    </div>
+  </div>
+
+  <div class="featured-artist-card">
+    <h4>Featured</h4>
+    <a href="">
+      <img src="/assets/artist.png" alt="artist">
+    </a>
+    <div class="featured-artist-card-infos">
+      <h3>Work of Art Title</h3>
+      <p>By name of artist</p>
+      <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
+    </div>
+  </div>
+
+  <div class="featured-artist-card">
+    <h4>Featured</h4>
+    <a href="">
+      <img src="/assets/artist.png" alt="artist">
+    </a>
+    <div class="featured-artist-card-infos">
+      <h3>Work of Art Title</h3>
+      <p>By name of artist</p>
+      <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
+    </div>
+  </div>
+
+</div>
+<br>
 <div class="container-work-of-art-cards">
 
   <div class="work-of-art-card">
     <a href="">
-      <img src="/assets/dodoma.png" alt="dodoma">
+      <img src="/assets/artwork_2.jpeg" alt="artwork_2">
     </a>
       <div class="work-of-art-card-infos">
       <h3>Work of Art Title</h3>
-      <h4>Category / Category / Category</h4>
       <p>By name of artist</p>
       <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
     </div>
@@ -28,7 +79,6 @@
     </a>
     <div class="work-of-art-card-infos">
       <h3>Work of Art Title</h3>
-      <h4>Category / Category / Category</h4>
       <p>By name of artist</p>
       <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
     </div>
@@ -36,11 +86,21 @@
 
   <div class="work-of-art-card">
     <a href="">
-      <img src="/assets/dodoma.png" alt="dodoma">
+      <img src="/assets/artwork_1.png" alt="artwork_1">
     </a>
     <div class="work-of-art-card-infos">
       <h3>Work of Art Title</h3>
-      <h4>Category / Category / Category</h4>
+      <p>By name of artist</p>
+      <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
+    </div>
+  </div>
+
+  <div class="work-of-art-card">
+    <a href="">
+      <img src="/assets/artwork_3.jpg" alt="artwork_3">
+    </a>
+    <div class="work-of-art-card-infos">
+      <h3>Work of Art Title</h3>
       <p>By name of artist</p>
       <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
     </div>
@@ -52,7 +112,7 @@
 
   <div class="artist-card">
     <a href="">
-      <img src="/assets/artist.png" alt="artist">
+      <img src="/assets/artist_1.png" alt="artist_1">
     </a>
     <div class="artist-card-infos">
       <h3>Artist Name</h3>
@@ -78,7 +138,7 @@
 
   <div class="artist-card">
     <a href="">
-      <img src="/assets/artist.png" alt="artist">
+      <img src="/assets/artist_2.png" alt="artist_2">
     </a>
     <div class="artist-card-infos">
       <h3>Artist Name</h3>
