draft for the profile page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
     <i class="fa fa-search"></i>
   </form>
 </div>
-
+<h1>Featured Artist Cards</h1>
 <div class="container-featured-artists-cards">
 
   <div class="featured-artist-card">
@@ -34,32 +34,9 @@
     </div>
   </div>
 
-  <div class="featured-artist-card">
-    <h4>Featured</h4>
-    <a href="">
-      <img src="/assets/artist.png" alt="artist">
-    </a>
-    <div class="featured-artist-card-infos">
-      <h3>Work of Art Title</h3>
-      <p>By name of artist</p>
-      <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
-    </div>
-  </div>
-
-  <div class="featured-artist-card">
-    <h4>Featured</h4>
-    <a href="">
-      <img src="/assets/artist.png" alt="artist">
-    </a>
-    <div class="featured-artist-card-infos">
-      <h3>Work of Art Title</h3>
-      <p>By name of artist</p>
-      <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
-    </div>
-  </div>
-
 </div>
 <br>
+<h1>Work of Art Cards</h1>
 <div class="container-work-of-art-cards">
 
   <div class="work-of-art-card">
@@ -95,19 +72,8 @@
     </div>
   </div>
 
-  <div class="work-of-art-card">
-    <a href="">
-      <img src="/assets/artwork_3.jpg" alt="artwork_3">
-    </a>
-    <div class="work-of-art-card-infos">
-      <h3>Work of Art Title</h3>
-      <p>By name of artist</p>
-      <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
-    </div>
-  </div>
-
 </div>
-
+<h1>Artist Cards</h1>
 <div class="container-artist-cards">
 
   <div class="artist-card">
@@ -151,6 +117,7 @@
 
 </div>
 <br>
+<h1>Artist Profile Card</h1>
 <div class="container-profile-card">
 
   <div class="profile-card">
