--- a/app/views/work_of_arts/show.html.erb
+++ b/app/views/work_of_arts/show.html.erb
@@ -5,6 +5,7 @@
     </a>
     <div class="work-of-art-card-infos">
       <h3><%= @work_of_art.name %></h3>
+      <h4><%= @work_of_art.user %></h4>
       <h4><%= @work_of_art.creation_date %></h4>
       <p><%= @work_of_art.description %></p>
       <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
