fixed the work of art cards

--- a/app/assets/stylesheets/components/_artist-card.scss
+++ b/app/assets/stylesheets/components/_artist-card.scss
@@ -2,6 +2,8 @@
   display: flex;
   justify-content: space-around;
   flex-direction: row;
+  flex-wrap: wrap;
+  flex-basis: 33.333333%;
 
   .artist-card .artist-card-infos {
     display: flex;
