--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -72,6 +72,17 @@
     </div>
   </div>
 
+  <div class="work-of-art-card">
+    <a href="">
+      <img src="/assets/artwork_1.png" alt="artwork_1">
+    </a>
+    <div class="work-of-art-card-infos">
+      <h3>Work of Art Title</h3>
+      <p>By name of artist</p>
+      <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
+    </div>
+  </div>
+
 </div>
 <h1>Artist Cards</h1>
 <div class="container-artist-cards">
