--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,11 +4,11 @@
     <div class="artist-card">
       <%= link_to image_tag("artist.png"), user_path(user)%>
       <div class="artist-card-infos">
-        <h3><%= user.username %></h3>
         <h3><%= user.first_name %> - <%= user.last_name %></h3>
         <h4><%= user.art_type%></h4>
-        <%= link_to "See my work", "#" %>
-        <p><%= user.country%> </p>
+        <p><%= user.city%>, <%= user.country%></p>
+        <br>
+        <br>
       </div>
     </div>
   <% end %>
