--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,15 @@
 <br>
+
 <div class="container-profile-card">
 
   <div class="profile-card">
-    <a href="">
-      <img src="/assets/artist.png" alt="artist">
-    </a>
+    <%= link_to image_tag("artist.png") %>
     <div class="profile-card-infos">
       <h3><%= @user.username  %></h3>
       <hr>
       <h4><%= @user.art_type  %></h4>
       <hr>
-      <p><%= @user.city  %> <%= @user.country  %></p>
+      <p><%= @user.city  %>, <%= @user.country  %></p>
       <hr>
       <p>Biography</p>
       <p><%= @user.description  %></p>
@@ -23,21 +22,25 @@
   </div>
 
 </div>
-<br>
-<h3>Portfolio</h3>
-<% @user.work_of_arts.each do |art| %>
-<div class="container-work-of-art-cards">
-  <div class="work-of-art-card-card">
-    <a href="">
-      <img src="/assets/dodoma.png" alt="dodoma">
-    </a>
-    <div class="work-of-art-card-infos">
-      <h3><%= art.name %></h3>
-      <p><%= art.description %></p>
-      <p><%= art.creation_date %></p>
-      <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
-    </div>
-  </div>
-  </div>
-<% end %>
 
+<br>
+<br>
+<br>
+<h3 style="text-align:center">Portfolio</h3>
+<br>
+<br>
+
+<div class="container-work-of-art-cards">
+
+  <% @user.work_of_arts.each do |art| %>
+    <div class="work-of-art-card-card">
+      <%= link_to image_tag("dodoma.png") %>
+      <div class="work-of-art-card-infos">
+        <h3><%= art.name %></h3>
+        <p><%= art.description %></p>
+        <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
+      </div>
+    </div>
+  <% end %>
+
+</div>
