--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,3 +1,7 @@
+.navbar-container {
+  margin: 0 25px;
+}
+
 .navbar-hr {
   border-color: black;
 }
@@ -21,4 +25,8 @@
 
 .navbar-lewagon .navbar-brand img {
   width: 40px;
+}
+
+.always-on-tabs {
+  justify-content: left;
 }
