--- a/app/assets/stylesheets/components/_searchbar.scss
+++ b/app/assets/stylesheets/components/_searchbar.scss
@@ -1,22 +1,25 @@
 .searchbar {
+  position: absolute;
 
   form {
     position: relative;
+    margin-left: 35px;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%);
     transition: all 1s;
     width: 50px;
     height: 50px;
-    background: white;
+    background: transparent;
     box-sizing: border-box;
     border-radius: 25px;
-    border: 4px solid white;
+    border: 4px solid transparent;
     padding: 5px;
   }
 
 
   input {
+    background: white;
     position: absolute;
     top: 0;
     left: 0;
