--- a/app/views/work_of_arts/index.html.erb
+++ b/app/views/work_of_arts/index.html.erb
@@ -3,12 +3,12 @@
   <% @work_of_arts.each do |art| %>
     <div class="work-of-art-card">
       <% if art.photos.attached? %>
-        <%= cl_image_tag art.key, crop: :fill, user_work_of_art_path(art.user, art) %>
+        <%= cl_image_tag art.key, crop: :fill %>
       <% else %>
         <%= image_tag('dodoma.png') %>
       <% end %>
       <div class="work-of-art-card-infos">
-        <h3><%= art.name %></h3>
+        <h3><%= link_to art.name, user_work_of_art_path(art.user, art) %></h3>
         <p>by <u><%= art.user.first_name %> <%= art.user.last_name %></u></h3>
         <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
       </div>
@@ -16,5 +16,4 @@
       <br>
     </div>
   <% end %>
-
 </div>
