--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -30,7 +30,7 @@
         <li class="nav-item active">
           <%= link_to "Artworks", work_of_arts_path, class: "nav-link" %>
         <li class="nav-item active">
-          <%= link_to "Exhibitions", "#", class: "nav-link" %>
+          <%= link_to "Collabs", collabs_path, class: "nav-link" %>
         </li>
       </ul>
 
