--- a/app/views/collabs/show.html.erb
+++ b/app/views/collabs/show.html.erb
@@ -1,6 +1,9 @@
 <%= @collab.name %>
 
+<% @collab.users.each do |user| %>
+  <%= user.username %>
+<% end %>
 
-<%= link_to "Edit Collab", edit_collab_path(@collab) %>
+<%= link_to "Add a member", edit_collab_path(@collab) %>
 
 <%= link_to "Back", collabs_path %>
