responsive profile for the entire website done and up-do-date

--- a/app/assets/stylesheets/components/_artist-card.scss
+++ b/app/assets/stylesheets/components/_artist-card.scss
@@ -15,12 +15,13 @@
     flex-direction: column;
     text-align: left;
     position: relative;
+    margin-bottom: 20px;
 
     .favorite-icon {
       position: absolute;
       box-shadow: 0 0 15px rgba(0,0,0,0.1);
-      right: 20px;
-      top: -65px;
+      right: 9px;
+      top: -57px;
       pointer-events: none;
     }
 
