--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -11,3 +11,6 @@
 @import "searchbar";
 @import "profile-card";
 @import "featured-artist-card";
+@import "media-320px";
+@import "media-481px";
+@import "media-768px";
