--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,7 +7,7 @@
         <h3><%= user.first_name %> - <%= user.last_name %></h3>
         <h4><%= user.art_type%></h4>
         <p><%= user.city%>, <%= user.country%></p>
-        <br>
+        <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
         <br>
       </div>
     </div>
