--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,7 @@
 <br>
 <h1>ARTSOUILLE</h1>
-<br>
 
-<h1>Featured Artist Cards</h1>
+<!-- <h1>Featured Artist Cards</h1>
 
 <div class="container-featured-artists-cards">
 
@@ -31,7 +30,7 @@
   </div>
 
 </div>
-<br>
+<br> -->
 <h1>Work of Art Cards</h1>
 <div class="container-work-of-art-cards">
 
@@ -89,8 +88,7 @@
     </a>
     <div class="artist-card-infos">
       <h3>Artist Name</h3>
-      <h4>Category / Category / Category</h4>
-      <p>Number of Works</p>
+      <h4>Category</h4>
       <p>Location</p>
       <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
     </div>
@@ -102,8 +100,7 @@
     </a>
     <div class="artist-card-infos">
       <h3>Artist Name</h3>
-      <h4>Category / Category / Category</h4>
-      <p>Number of Works</p>
+      <h4>Category</h4>
       <p>Location</p>
       <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
     </div>
@@ -115,15 +112,14 @@
     </a>
     <div class="artist-card-infos">
       <h3>Artist Name</h3>
-      <h4>Category / Category / Category</h4>
-      <p>Number of Works</p>
+      <h4>Category</h4>
       <p>Location</p>
       <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
     </div>
   </div>
 
 </div>
-<br>
+
 <h1>Artist Profile Card</h1>
 <div class="container-profile-card">
 
@@ -134,9 +130,7 @@
     <div class="profile-card-infos">
       <h3>Artist Name</h3>
       <hr>
-      <h4>Category / Category / Category</h4>
-      <hr>
-      <p>Number of Works</p>
+      <h4>Category</h4>
       <hr>
       <p>Location</p>
       <hr>
