--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,20 +3,9 @@
 
   <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
 
-    <%= link_to root_path, class: "navbar-brand" do %>
-      <%= image_tag "logo-navbar.png" %>
-      <% end %>
-
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
-    <div class="searchbar">
-      <form action="">
-        <input type="search" placeholder="Find an artist, artwork, exhibition...">
-        <i class="fa fa-search"></i>
-      </form>
-    </div>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
@@ -34,6 +23,16 @@
         </li>
       </ul>
 
+      <div class="searchbar">
+        <form action="">
+          <input type="search" placeholder="Find an artist, artwork, exhibition...">
+          <i class="fa fa-search"></i>
+        </form>
+      </div>
+
+    </div>
+
+    <div>
       <ul class="navbar-nav mr-auto">
         <% if user_signed_in? %>
           <li class="nav-item dropdown">
