add config cloudinary for data in prod

--- a/app/views/work_of_arts/index.html.erb
+++ b/app/views/work_of_arts/index.html.erb
@@ -1,6 +1,6 @@
 <div>
   <% if params[:query] == 'my_arts' %>
-    <%= link_to "Add new artwork", new_work_of_art_path(@work_of_art) %>
+    <%= link_to "Add a new artwork", new_work_of_art_path(@work_of_art) %>
   <% end %>
 </div>
 <div class="container-work-of-art-cards">
