made cloudinary worked

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -9,7 +9,7 @@
                       required: false %>
           <%= f.input :description,
                       required: false %>
-          <%= f.input :photo, as: :file, input_html: { multiple: true } %>
+          <%= f.input :photo, as: :file %>
           <%= f.button :submit, class:"btn btn-primary" %>
           <%= link_to 'Cancel', user_path, class: "btn btn-outline-secondary" %>
         <% end %>
