--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,6 +26,7 @@
         <% if current_user == @user  %>
         <div class="btn-profile">
           <%= link_to "Edit my profile", edit_user_path, class: "btn btn-outline-primary btn-edit" %>
+          <%= link_to "Add a new artwork", new_work_of_art_path(@work_of_art), class: "btn btn-outline-primary" %>
         </div>
         <% end %>
       </div>
@@ -34,30 +35,4 @@
 
 </div>
 <br>
-<<<<<<< HEAD
 
-<div class="container-work-of-art-cards">
-  <% if current_user == @user %>
-  <div>
-    <%= link_to "Add a new artwork", new_work_of_art_path(@work_of_art) %>
-  </div>
-  <% end %>
-
-  <% @user.work_of_arts.each do |art| %>
-    <div class="work-of-art-card-card">
-      <% if art.photo.attached? %>
-        <%= cl_image_tag art.photo.key, crop: :fill %>
-      <% else %>
-        <%= image_tag('dodoma.png') %>
-      <% end %>
-      <div class="work-of-art-card-infos">
-        <h3><%= art.name %></h3>
-        <p><%= art.description %></p>
-        <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
-      </div>
-    </div>
-  <% end %>
-
-</div>
-=======
->>>>>>> master
