--- a/app/views/work_of_arts/_form-work-of-art.html.erb
+++ b/app/views/work_of_arts/_form-work-of-art.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <%= simple_form_for @work_of_art do |f| %>
+  <%= simple_form_for [current_user, @work_of_art] do |f| %>
     <%= f.input :name %>
     <%= f.input :description %>
     <%= f.input :creation_date, as: :date %>
