--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar-container">
+<div class="navbar-container background_yellow fixed-top">
   <hr class="navbar-hr">
 
   <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
@@ -8,7 +8,6 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
       <ul class="navbar-nav">
         <li class="nav-item active">
           <%= link_to "Home", root_path, class: "nav-link" %>
@@ -29,7 +28,6 @@
           <i class="fa fa-search"></i>
         </form>
       </div>
-
     </div>
 
     <div>
@@ -53,5 +51,6 @@
       </ul>
     </div>
   </div>
+
   <hr class="navbar-hr">
 </div>
