Basic front and cannot modify if not member of a collab + My collabs in navbar

--- a/app/views/collabs/_form-collab.html.erb
+++ b/app/views/collabs/_form-collab.html.erb
@@ -1,4 +1,11 @@
-<%= simple_form_for @collab do |f| %>
-  <%= f.input :name %>
-  <%= f.button :submit, class:"btn btn-primary" %>
-<% end %>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-6">
+      <%= simple_form_for @collab do |f| %>
+        <%= f.input :name %>
+        <%= f.button :submit, class:"btn btn-primary" %>
+      <% end %>
+    </div>
+  </div>
+</div>
+
