--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -41,7 +41,7 @@
               <%= link_to "My profile", user_path(current_user), class: "dropdown-item nav-link" %>
               <%= link_to "Messages", "#", class: "nav-link" %>
               <%= link_to "My Art", work_of_arts_path(query: 'my_arts'), class: "dropdown-item nav-link" %>
-              <%= link_to "Another action", "#", class: "dropdown-item nav-link" %>
+              <%= link_to "My Collabs", collabs_path(query: 'my_collabs'), class: "dropdown-item nav-link" %>
               <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item nav-link" %>
             </div>
           </li>
