--- a/app/views/users_collabs/new.html.erb
+++ b/app/views/users_collabs/new.html.erb
@@ -1,7 +1,16 @@
-<%= simple_form_for [@collab, @users_collab] do |f| %>
-  <%= f.input :user, collection: @filtered_users, label_method: lambda {|u| u.username}  %>
-  <%= f.button :submit, class:"btn btn-primary" %>
-<% end %>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-6">
+      <%= simple_form_for [@collab, @users_collab] do |f| %>
+        <%= f.input :user, collection: @filtered_users, label_method: lambda {|u| u.username}  %>
+        <%= f.button :submit, class:"btn btn-primary" %>
+      <% end %>
+    </div>
+  </div>
+</div>
+
+
+
 
 
 
