the background changes according to the page you're on, same for the navbar. Made the account icon transparent and some effect.

--- a/app/assets/stylesheets/components/_background.scss
+++ b/app/assets/stylesheets/components/_background.scss
@@ -1,3 +1,15 @@
 .background_yellow {
   background-color: #fff5c0;
 }
+
+.background_blue {
+  background-color: #dee8eb;
+}
+
+.background_pink {
+  background-color: #ffe8e8;
+}
+
+.background_green {
+  background-color: #ddf5dd;
+}
