--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,5 @@
-<div class="background_yellow">
+<div class="<%= page_background_class %>">
+
   <h1>ARTSOUILLE</h1>
 
   <!-- <h1>Featured Artist Cards</h1>
@@ -32,6 +33,7 @@
   </div>
   <br> -->
   <h1>Work of Art Cards</h1>
+
   <div class="container-work-of-art-cards">
 
     <div class="work-of-art-card">
@@ -79,7 +81,9 @@
     </div>
 
   </div>
+
   <h1>Artist Cards</h1>
+
   <div class="container-artist-cards">
 
     <div class="artist-card">
@@ -121,6 +125,7 @@
   </div>
 
   <h1>Artist Profile Card</h1>
+
   <div class="container-profile-card">
 
     <div class="profile-card">
