--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar-container background_yellow fixed-top">
+<div class="navbar-container fixed-top <%= page_background_class %>">
   <hr class="navbar-hr">
 
   <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
