--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,18 +1,19 @@
-<div class="container-artist-cards">
+<div class="<%= page_background_class %>">
+  <div class="container-artist-cards">
 
-  <% @users.each do |user| %>
-    <div class="artist-card">
-      <%= link_to image_tag("artist.png"), user_path(user)%>
-      <div class="artist-card-infos">
-        <h3><%= user.first_name %> - <%= user.last_name %></h3>
-        <h4><%= user.art_type%></h4>
-        <p><%= user.city%>, <%= user.country%></p>
-        <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
-        <br>
+    <% @users.each do |user| %>
+      <div class="artist-card">
+        <%= link_to image_tag("artist.png"), user_path(user)%>
+        <div class="artist-card-infos">
+          <h3><%= user.first_name %> - <%= user.last_name %></h3>
+          <h4><%= user.art_type%></h4>
+          <p><%= user.city%>, <%= user.country%></p>
+          <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
+          <br>
+        </div>
       </div>
-    </div>
-  <% end %>
+    <% end %>
 
+  </div>
 </div>
-
 
