--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,25 +1,26 @@
-<br>
+<div class="<%= page_background_class %>">
+  <br>
 
-<div class="container-profile-card">
-
-  <div class="profile-card">
-    <%= link_to image_tag("artist.png") %>
-    <div class="profile-card-infos">
-      <h3><%= @user.username  %></h3>
-      <hr>
-      <h4><%= @user.art_type  %></h4>
-      <hr>
-      <p><%= @user.city  %>, <%= @user.country  %></p>
-      <hr>
-      <p>Biography</p>
-      <p><%= @user.description  %></p>
-      <hr>
-      <p>See my exhibitions</p>
-      <hr>
-      <p>Want to collab? Send a message!</p>
-      <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
+  <div class="container-profile-card">
+    <div class="profile-card">
+      <%= link_to image_tag("artist.png") %>
+      <div class="profile-card-infos">
+        <h3><%= @user.username  %></h3>
+        <hr>
+        <h4><%= @user.art_type  %></h4>
+        <hr>
+        <p><%= @user.city  %>, <%= @user.country  %></p>
+        <hr>
+        <p>Biography</p>
+        <p><%= @user.description  %></p>
+        <hr>
+        <p>See my exhibitions</p>
+        <hr>
+        <p>Want to collab? Send a message!</p>
+        <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
+      </div>
     </div>
   </div>
 
+  <br>
 </div>
-<br>
