--- a/app/views/work_of_arts/index.html.erb
+++ b/app/views/work_of_arts/index.html.erb
@@ -1,16 +1,16 @@
-<div class="container-work-of-art-cards">
+<div class="<%= page_background_class %>">
 
-  <% @work_of_arts.each do |art| %>
-    <div class="work-of-art-card">
-      <%= link_to image_tag("artwork_3.jpg"), user_work_of_art_path(art.user, art) %>
-      <div class="work-of-art-card-infos">
-        <h3><%= art.name %></h3>
-        <p>by <u><%= art.user.first_name %> <%= art.user.last_name %></u></h3>
-        <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
+  <div class="container-work-of-art-cards">
+    <% @work_of_arts.each do |art| %>
+      <div class="work-of-art-card">
+        <%= link_to image_tag("artwork_3.jpg"), user_work_of_art_path(art.user, art) %>
+        <div class="work-of-art-card-infos">
+          <h3><%= art.name %></h3>
+          <p>by <u><%= art.user.first_name %> <%= art.user.last_name %></u></h3>
+          <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
+        </div>
       </div>
-      <br>
-      <br>
-    </div>
-  <% end %>
+    <% end %>
+  </div>
 
 </div>
