--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container-artist-cards">
   <% @users.each do |user| %>
     <div class="artist-card">
-      <% if @user.photo.attached? %>
+      <% if user.photo.attached? %>
         <%= cl_image_tag @user.photo.key, crop: :fill %>
       <% else %>
         <%= link_to image_tag("artist.png"), user_path(user)%>
