--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -45,7 +45,11 @@
 
   <% @user.work_of_arts.each do |art| %>
     <div class="work-of-art-card-card">
-      <%= link_to image_tag("dodoma.png") %>
+      <% if user.photo.attached? %>
+        <%= cl_image_tag user.photo.key, crop: :fill %>
+      <% else %>
+        <%= link_to image_tag("dodoma.png") %>
+      <% end %>
       <div class="work-of-art-card-infos">
         <h3><%= art.name %></h3>
         <p><%= art.description %></p>
