--- a/app/assets/stylesheets/components/_artist-card.scss
+++ b/app/assets/stylesheets/components/_artist-card.scss
@@ -38,6 +38,8 @@
   img {
     max-width: 400px;
     max-height: 600px;
+    -webkit-transition: .2s ease-in-out;
+    transition: .2s ease-in-out;
   }
 
   img:hover {
