--- a/app/assets/stylesheets/components/_work-of-art-card.scss
+++ b/app/assets/stylesheets/components/_work-of-art-card.scss
@@ -37,6 +37,8 @@
   img {
     max-width: 400px;
     max-height: 600px;
+    -webkit-transition: .2s ease-in-out;
+    transition: .2s ease-in-out;
   }
 
   img:hover {
