--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
   <div class="container-profile-card">
     <div class="profile-card">
       <% if @user.photo.attached? %>
-        <%= cl_image_tag(@user.photo.key, crop: 'fill') %>
+        <%= image_tag @user.photo, crop: :fill %>
       <% else %>
         <%= link_to image_tag("artist.png") %>
       <% end %>
@@ -44,7 +44,7 @@
   <% @user.work_of_arts.each do |art| %>
     <div class="work-of-art-card-card">
       <% if @user.photo.attached? %>
-        <%= cl_image_tag(@user.photo.key, crop: 'fill') %>
+        <%= image_tag @user.photo, crop: :fill %>
       <% else %>
         <%= link_to image_tag("dodoma.png") %>
       <% end %>
