--- a/app/views/exhibitions/index.html.erb
+++ b/app/views/exhibitions/index.html.erb
@@ -4,8 +4,8 @@
     <%= exhibition.name %>
     <%= exhibition.start_date %>
     <%= exhibition.end_date %>
+    <%= exhibition.collabs.user.username %>
   <% end %>
 
   <%= link_to "Go back to all collabs", collabs_path %>
 </div>
-
