--- a/app/views/exhibitions/show.html.erb
+++ b/app/views/exhibitions/show.html.erb
@@ -4,5 +4,5 @@
 
 <%= link_to "Edit Exhibition", edit_collab_exhibition_path(@collab) %>
 <%= link_to "Create a new exhibition", new_collab_exhibition_path(@collab) %>
-<%= link_to "Back to all the collaborations", collabs_path %>
+<%= link_to "Back to all the collas", collabs_path %>
 <%= link_to "Back to all exhibitions", exhibitions_path %>
