--- a/app/views/exhibitions/show.html.erb
+++ b/app/views/exhibitions/show.html.erb
@@ -1,8 +1,11 @@
-<%= @exhibition.name %>
+<!-- # <%= @exhibition.name %>
 
-<%= @collab.exhibition.user %>
+# <%= @collab.exhibition.user %>
 
-<%= link_to "Edit Exhibition", edit_collab_exhibition_path(@collab) %>
-<%= link_to "Create a new exhibition", new_collab_exhibition_path(@collab) %>
-<%= link_to "Back to all the collas", collabs_path %>
-<%= link_to "Back to all exhibitions", exhibitions_path %>
+# <%= link_to "Edit Exhibition", edit_collab_exhibition_path(@collab) %>
+# <%= link_to "All collabs", collabs_path %>
+# <%= link_to "All exhibitions", exhibitions_path %> -->
+
+<div class="container">
+  <h2><%= @exhibition.name %></h2>
+</div>
