forms under construction

--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -11,11 +11,11 @@ $font-size-base: 1rem;
 
 // Colors
 $body-color: $gray;
-$primary:    $blue;
-$success:    $green;
-$info:       $yellow;
-$danger:     $red;
-$warning:    $orange;
+$primary:    #1098ad;
+$success:    #6fba82;
+$info:       #ffe227;
+$danger:     #ef4e7b;
+$warning:    #f79533;
 
 // Buttons & inputs' radius
 $border-radius:    2px;
