--- a/app/views/work_of_arts/edit.html.erb
+++ b/app/views/work_of_arts/edit.html.erb
@@ -1,1 +1,10 @@
-<%= render 'form-work-of-art' %>
+<div class="container">
+  <%= simple_form_for [current_user, @work_of_art] do |f| %>
+    <%= f.input :name %>
+    <%= f.input :description %>
+    <%= f.input :creation_date, as: :date %>
+    <%= f.input :photo, as: :file %>
+    <%= f.button :submit, class:"btn btn-primary" %>
+
+  <% end %>
+</div>
