added btn design

--- a/app/views/exhibitions/index.html.erb
+++ b/app/views/exhibitions/index.html.erb
@@ -4,6 +4,6 @@
     <%= link_to exhibition.name, exhibition_path(exhibition) %>
     <% end %>
   </div>
-  <%= link_to "Homepage", root_path %>
+  <%= link_to "Homepage", root_path, class: 'btn btn-primary' %>
 </div>
 
