fix problem routes

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -54,8 +54,8 @@
         <img src="/assets/heart-icon" alt="heart" class="favorite-icon">
       </div>
       <% if current_user == @user %>
-        <%= link_to "Edit", edit_user_work_of_art_path(art.user, art) %>
-        <%= link_to "Delete", user_work_of_art_path(art.user, art), data: { confirm: "Are you sure?" }, :method => :delete %>
+        <%= link_to "Edit", edit_work_of_art_path(art) %>
+        <%= link_to "Delete", work_of_art_path(art), data: { confirm: "Are you sure?" }, :method => :delete %>
       <% end %>
     </div>
   <% end %>
