--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -14,7 +14,23 @@
 
     .btn {
       width: 100%;
-      margin-bottom: 20px
+      margin-bottom: 20px;
+      border-color: #1098ad;
+      border: 0 solid;
+      box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
+      outline: 1px solid;
+      outline-color: #1098ad;
+      outline-offset: 0px;
+      text-shadow: none;
+      transition: all 1000ms cubic-bezier(0.19, 1, 0.22, 1);
+    }
+
+    .btn:hover {
+      border: 1px solid;
+      box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
+      outline-color: rgba(255, 255, 255, 0);
+      outline-offset: 15px;
+      text-shadow: 1px 1px 2px #1098ad;
     }
   }
 
