--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -10,31 +10,79 @@
   padding: 15px 32px;
   position: relative;
   cursor: pointer;
+
+  .btn-search::before,
+  .btn-search::after {
+    background: black;
+    content: '';
+    position: absolute;
+    z-index: -1;
+  }
+
+  .btn-search:hover {
+    color: white;
+  }
+
+  .btn-search::after {
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+    height: 100%;
+    left: 0;
+    top: 0;
+    width: 0;
+  }
+
+  .btn-search:hover:after {
+    width: 100%;
+  }
 }
 
-.btn-search::before,
-.btn-search::after {
-  background: black;
-  content: '';
-  position: absolute;
-  z-index: -1;
-}
-
-.btn-search:hover {
-  color: white;
-}
-
-.btn-search::after {
-  -webkit-transition: all 0.3s;
-  -moz-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  transition: all 0.3s;
-  height: 100%;
-  left: 0;
-  top: 0;
-  width: 0;
-}
-
-.btn-search:hover:after {
+.btn-outline-primary {
   width: 100%;
+  margin-bottom: 20px;
+  border-color: #1098ad;
+  border: 0 solid;
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
+  outline: 1px solid;
+  outline-color: #1098ad;
+  outline-offset: 0px;
+  text-shadow: none;
+  transition: all 1000ms cubic-bezier(0.19, 1, 0.22, 1);
 }
+
+.btn-outline-primary:hover {
+  color: white;
+  border: 1px solid;
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
+  outline-color: rgba(255, 255, 255, 0);
+  outline-offset: 15px;
+  border-color: #1098ad;
+  text-shadow: 1px 1px 2px #1098ad;
+}
+
+.btn-outline-warning {
+  width: 100%;
+  margin-bottom: 20px;
+  border-color: #f79533;
+  border: 0 solid;
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
+  outline: 1px solid;
+  outline-color: #f79533;
+  outline-offset: 0px;
+  text-shadow: none;
+  transition: all 1000ms cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.btn-outline-warning:hover {
+  color: white;
+  border: 1px solid;
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
+  outline-color: rgba(255, 255, 255, 0);
+  outline-offset: 15px;
+  border-color: #f79533;
+  text-shadow: 1px 1px 2px #f79533;
+}
+
+
