--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -39,7 +39,7 @@
                 input_html: { autocomplete: "city" } %>
   </div>
           <div class="form-actions">
-            <%= f.button :submit, "I am an artist", class: "btn btn-outline-primary" %>
+            <%= f.button :submit, "I am an artist!", class: "btn btn-outline-primary" %>
           </div>
         <% end %>
         <%= render "devise/shared/links" %>
