--- a/app/views/users/_infowindow.html.erb
+++ b/app/views/users/_infowindow.html.erb
@@ -1,1 +1,6 @@
-_infowindow.html.erb
+<div class="container">
+  <div class="card-body">
+    <h2><%= user.username %></h2>
+    <h3><%= user.city %></h3>
+  </div>
+</div>
