--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -3,6 +3,20 @@
   padding-top: 50px;
   display: flex;
   justify-content: center;
+
+  h2 {
+    font-size: 25px;
+  }
+
+  h3 {
+    font-size: 20px;
+  }
+
+  p {
+    font-size: 16px;
+  }
+
+
 }
 
 .mapboxgl-popup {
